# hpcfmi-mpivi

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  CMakeLists.txt  Doxyfile  Makefile  README.md  main.cpp  test.sh
.github/workflows/: c-cpp.yml
automation/jobs/: TestSchema2.yaml  default.yaml  schema2.yaml  scheme2.yaml  scheme3.yaml  test.yaml
automation/jobs/RPI/: rpi1.yaml  rpi3.yaml
automation/jobs/ci/: default.yaml  scheme1.yaml  scheme2.yaml  scheme3.yaml
automation/jobs/hpcclassa/: default.yaml  hpcclassa1.yaml  hpcclassa2.yaml  hpcclassa3.yaml
automation/jobs/hpcclassb/: default.yaml  hpcclassb1.yaml  hpcclassb2.yaml  hpcclassb3.yaml
automation/jobs/hpcclassmixed/: default.yaml  hpcclassmixed1.yaml  hpcclassmixed2.yaml  hpcclassmixed3.yaml
automation/jobs/local/: default.yaml  local2.yaml  local3.yaml
automation/jobs/nuc/: default.yaml  nuc1.yaml  nuc2.yaml  nuc3.yaml  tst1.yaml
automation/jobs/rpi/: default.yaml  rpi1.yaml  rpi2.yaml  rpi3.yaml
data/data_normal/cpp/: params.txt
inc/: CMakeLists.txt  FirstSchema.h  MpiViSchema.h  MpiViSchema01.h  MpiViSchema02.h  MpiViSchema03.h  MpiViUtility.h  VIUtility.h  ValueIteration.h  simulator.h  util.h  verbose.h
lib/: CMakeLists.txt
lib/inc/: Interface.h  Simulator.h
lib/src/: Simulator.cpp
rep/: .gitignore  IEEEStran.cls  Makefile  _cropPdfPLots.sh  _generatePlots.py  _generatePuml.sh  classdiagram.plantuml  literature.bib  report.tex
rep/data/: 15314b7_hpcclassa_tobias.klama@tum.de.csv  24d25ec-dirty_hpcclassa_.csv  24d25ec-dirty_hpcclassa_till.huelder@tum.de.csv  24d25ec-dirty_hpcclassb_.csv  24d25ec-dirty_hpcclassb_tobias.krug@tum.de.csv  24d25ec_nuc_tobias.krug@tum.de.csv  32b485e-dirty_hpcclassb_tobias.klama@tum.de.csv  32b485e-dirty_rpi_tobias.klama@tum.de.csv  32b485e_rpi_tobias.klama@tum.de.csv  3467289-dirty_nuc_tobias.krug@tum.de.csv  74eedac-dirty_rpi_tobias.klama@tum.de.csv  b17cf21-dirty_hpcclassmixed_till.huelder@tum.de.csv  b17cf21-dirty_hpcclassmixed_till.huelder_tum.de.csv  b17cf21-dirty_local_tobias.krug@tum.de.csv  b17cf21-dirty_nuc_tobias.krug@tum.de.csv
rep/data/hiperf-local/: b17cf21-dirty_local_tobias.krug@tum.de.csv
rep/data/master/: 08df3c3_local_ci@github.csv  1842a70-dirty_local_tobias.krug@tum.de.csv  18de3c0-dirty_local_ci@github.csv  280639a-dirty_local_tobias.krug@tum.de.csv  41e2fb0_local_c-cpp_ci.csv  4c70b1d-dirty_local_ci@github.csv  4d9592c-dirty_local_tobias.krug@tum.de.csv  4d9592c_local_ci@github.csv  4dc4a83_hpcclassa_tobias.klama@tum.de.csv  4dc4a83_hpcclassb_tobias.klama@tum.de.csv  4dc4a83_hpcclassmixed_tobias.klama@tum.de.csv  4dc4a83_local_ci@github.csv  4dc4a83_rpi_tobias.klama@tum.de.csv  763cc28-dirty_hpcclassb_tobias.krug@tum.de.csv  763cc28-dirty_nuc_tobias.krug@tum.de.csv  763cc28_local_ci@github.csv  97404cf-dirty_local_tobias.krug@tum.de.csv  97404cf-dirty_nuc_tobias.krug@tum.de.csv  9950413-dirty_local_tobias.krug@tum.de.csv  9950413_local_ci@github.csv  9f483cf-dirty_hpcclassa_tobias.krug@tum.de.csv  9f483cf-dirty_hpcclassb_tobias.krug@tum.de.csv  9f483cf-dirty_hpcclassmixed_tobias.krug@tum.de.csv  9f483cf-dirty_nuc_tobias.krug@tum.de.csv  9f483cf-dirty_tobias.krug@tum.de.csv  9f4a8d8_local_ci@github.csv  aaeed5e-dirty_local_tobias.krug@tum.de.csv  c584c8d_local_ci@github.csv  c7c3c01-dirty_nuc_tobias.krug@tum.de.csv  c7c3c01-dirty_rpi_.csv  c7c3c01_local_ci@github.csv  e49775b-dirty_ci_ci@github.csv  e49775b-dirty_hpcclassb_tobias.krug@tum.de.csv  e49775b-dirty_local_tobias.krug@tum.de.csv  e49775b-dirty_nuc_tobias.krug@tum.de.csv
rep/data/removed/: b17cf21-dirty_local_tobias.krug@tum.de.csv  b17cf21-dirty_nuc_tobias.krug@tum.de.csv
rep/puml/: classdiagram.puml  scheme3.puml  scheme_load_data.puml
rep/tex/: Abstract.tex  Appendix.tex  Conclusion.tex  Header.tex  Introduction.tex  Keywords_Acro.tex  Main.tex  OwnScript.tex
results/: 5f84d2e_local_tobias.klama@tum.de.csv
src/: CMakeLists.txt  FirstSchema.cpp  MpiViSchema.cpp  MpiViSchema01.cpp  MpiViSchema02.cpp  MpiViSchema03.cpp  MpiViUtility.cpp  VIUtility.cpp  ValueIteration.cpp  scheme1.puml  scheme1_2.puml  scheme2.puml  scheme3.puml  scheme4.puml  scheme5.puml  scheme6.puml  simulator.cpp
utl/: Makefile  _postTest.sh  _preTest.sh  _prepareTarget.sh  _testCI.sh  _testTarget.sh  genRunConfig.py  getHostKeys.sh  init.sh  postTest.sh  preTest.sh  prepareTarget.sh  preparedata.py  qbuild.sh  readVisual.py  runTestX.sh  setupHostToolchain.sh  setupToolchain.sh  sshkey  test.sh  testTarget.sh  testX.sh  util.py
utl/RPI/: RPI.host  _testRPITarget.sh  prepareRPI.sh
utl/ci/: _testCI.sh
utl/hpcclassa/: _testHpcClassATarget.sh  hpcclassa.host  prepareHpcClassA.sh  testRunConfig.yaml
utl/hpcclassb/: _testHpcClassBTarget.sh  hpcclassb.host  prepareHpcClassB.sh  testRunConfig.yaml
utl/hpcclassmixed/: _testHpcClassMixedTarget.sh  hpcclassmixed.host  prepareHpcClassMixed.sh  testRunConfig.yaml
utl/local/: _testLocalTarget.sh  testRunConfig.yaml
utl/nuc/: _testNucTarget.sh  nuc.host  prepareNuc.sh  testRunConfig.yaml
utl/rpi/: _testRpiTarget.sh  prepareRpi.sh  rpi.host  testRunConfig.yaml
